# webots_arm

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: webots_cam.ini  webots_cam.yaml  webots_cam_13mp.yaml  webots_depth_cam.yaml  webots_wacker_cam.ini  webots_wacker_cam.yaml
include/webots_arm/: camera_control.h  joint_control.h  pointcloud_control.h
launch/: borunte_sim.launch  camera_control.launch  gripper_test.launch  joint_control.launch  pointcloud_control.launch  wacker_control.launch  wacker_control_small_fov.launch  za_sim.launch
scripts/: gripper_control
src/: arm_control.cpp  camera_control.cpp  joint_control.cpp  pointcloud_control.cpp
