<?xml version="1.0"?>
<package format="2">
  <name>webots_arm</name>
  <version>0.0.1</version>

  <description>Webots interface for a robot arm.</description>
  <maintainer email="alex@machinekoder.com">Alexander Rössler</maintainer>
  <author email="alex@machinekoder.com">Alexander Rössler</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>webots_ros</depend>
  <depend>roscpp</depend>
  <!-- <depend>rosparam_shortcuts</depend> -->

  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>catkin</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend version_gte="1.3.0">orocos_kdl</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <test_depend>rostest</test_depend>

</package>
